8060467: CMS: small OldPLABSize and -XX:-ResizePLAB cause assert(ResizePLAB || n_blks == OldPLABSize) failed: Error

Reviewed-by: tschatzl, jmasa, kbarrett